Updates on web styling

--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,5 @@
 body{
-    background-color: #363e44;
-    color: #2baedaff;
+    background-color: #00111C;
     font-family: Arial, Helvetica, sans-serif;
 }
 
