--- a/frontend/src/assets/styles/app.css
+++ b/frontend/src/assets/styles/app.css
@@ -5,6 +5,6 @@
 @tailwind utilities;
 
 body{
-    background-color: #00111C;
+    background-color: #151515;
     font-family: Arial, Helvetica, sans-serif;
 }
